# sentinel-brief

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml  deploy.yml  nightly.yml  security-scan.yml
archives/: archive-sample-2026-07-02.json
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/graph/: builder.py  nodes.py  state.py
backend/app/integrations/: aegis_gateway.py  email.py
backend/app/models/: items.py
backend/app/services/: brief_runner.py  eval_gate.py  report_store.py  snapshots.py  summarizer.py
backend/app/sources/: arxiv.py  base.py  hn.py  rss.py
backend/app/vpeetla_observability/: __init__.py  context.py  export.py  middleware.py  observe.py  recorder.py  spans.py
backend/tests/: test_api_auth.py  test_eval_gate.py  test_gateway.py  test_golden_eval_gate.py  test_graph.py  test_report_archive.py  test_snapshots.py  test_summarizer.py
config/: sources.yaml
demo/: app.js  architect-config.js  architect-panel.css  architect-panel.js  config.js  glassbox.js  index.html  styles.css
docs/: ARCHITECTURE.md  DEPLOY.md  LOOPS.md  PRODUCT.md  SLO.md
docs/adr/: 0001-governed-overnight-brief.md  0002-runs-auth-and-llm-synthesis.md
docs/diagrams/: canonical-architecture.mmd
scripts/: cron_trigger.sh
